k8s-rpi-apps-ingresses/traefik-ingress/service-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-traefik-v2
    app.kubernetes.io/name: traefik
  ports:
  - port: 8080
    name: dashboard
    targetPort: 8080
    protocol: "TCP"
