k8s-rpi-apps-ingresses/traefik-ingress/ingress-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik  
    avp.kubernetes.io/path: "k8secrets/ingresses"
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`<traefikdashhostname>.<domainname>`)
    kind: Rule
    services:
    - name: traefik-dashboard
      port: 8080
    middlewares:
      - name: basic-auth
        namespace: traefik-v2
